[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["tobratland"]
edition = "2018"
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
lib-simulation = { path = "../simulation" }
serde = { version = "1.0", features = ["derive"] }